--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^11.0.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "uuid": "^13.0.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
